--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Lab11_Smooties"
         tools:targetApi="31">
+        <activity android:name=".DetailActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
